# Meat_Starto

./: .gitignore  CMakeLists.txt  Makefile  Meat_Starto.pkg  Meat_Starto.self  Readme.md  imgui.ini  sfo.xml  toolchain-psl1ght.cmake
cmake/: CMakeCache.txt  Makefile  Meat_Starto_Mod.self.out  Meat_Starto_Mod.vpk  Meat_Starto_Mod.vpk_param.sfo  cmake_install.cmake
cmake_modules/: FindTinyXML2.cmake
src/: Animator.cpp  Animator.h  AssetManager.cpp  AssetManager.h  Factory.cpp  Factory.h  Hud.cpp  Hud.h  Juego.cpp  Juego.h  MPuntuaciones.cpp  MPuntuaciones.h  MenuInicio.cpp  MenuInicio.h  MenuPausa.cpp  MenuPausa.h  Particle.cpp  Particle.h  Player.cpp  Player.h  boss.cpp  boss.h  main.cpp  mj_t.cpp  mj_t.h  particleSystem.cpp  particleSystem.h
src/Mapa/: Mapa.cpp  Mapa.h
src/Mapa/Nodo/: Nodo.cpp  Nodo.h
src/Mapa/Nodo/Minijuegos/: goingUp.h
src/Mapa/Nodo/NPCs/: NPC.h  Skull.cpp  xPlotato.cpp  xPlotato.h
src/core/: core.h  rCircleShape.cpp  rCircleShape.h  rClock.cpp  rClock.h  rConvexShape.cpp  rConvexShape.h  rEvent.cpp  rEvent.h  rIntRect.cpp  rIntRect.h  rRectangleShape.cpp  rRectangleShape.h  rSprite.cpp  rSprite.h  rText.h  rTime.cpp  rTime.h  rView.cpp  rView.h
src/renderEngine/: Irenderer.h  rMusic.cpp  rMusic.h  rSound.cpp  rSound.h  rSoundBuffer.cpp  rSoundBuffer.h  renderEngine.cpp  renderEngine.h  rendererManager.cpp  rendererManager.h
